--- a/src/report/report.css
+++ b/src/report/report.css
@@ -19,34 +19,76 @@
   justify-content: space-around;
 }
 
+.topFeeders {
+  width: 100%;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+}
+
 .mainStats {
   display: flex;
   flex-direction: column;
-  font-size: 36px;
   width: 100%;
+  font-size: 36px;
   font-weight: bold;
   color: white;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
     -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.statPair {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
 }
 
-.stat {
-  color: coral;
+.statPair {
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.mainStats p {
+.topRoles {
+  width: 100%;
+}
+
+p {
   margin: 5px 5px 5px 5px !important;
 }
 
+p.stat {
+  font-size: 36px;
+  font-weight: bold;
+  color: white !important;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+p.stat2 {
+  font-size: 24;
+  font-weight: bold;
+  color: white !important;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+div.stat {
+  font-size: 36px;
+  font-weight: bold;
+  color: coral;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+div.stat2 {
+  font-size: 24;
+  font-weight: bold;
+  color: coral;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
 .reportBody {
+  margin-top: 400px;
+  margin-bottom: 50px;
   width: 50%;
   display: flex;
   flex-direction: column;
